# Pet-Care-Connect

./: .gitignore
Devops/: pet-care-connect-api-key.pem
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.tsx  index.css  index.tsx
client/src/data/: BookingsFilterOptions.ts  petQuotes.ts  usersData.ts
petcare-connect/backend/: __init__.py  pyproject.toml  sql
petcare-connect/backend/app/: main.py  schemas.py
petcare-connect/backend/app/core/: config.py
petcare-connect/backend/bookings/: crud.py  models.py  schemas.py
petcare-connect/backend/bookings/api/: controller.py
petcare-connect/backend/migrations/: env.py
petcare-connect/backend/migrations/versions/: 05484ff1e29a_add_users_petowners_pet_.py  d075131d9032_add_more_tables.py  d94a4b670f38_update_users_petowners_pet_.py
petcare-connect/backend/petowners/: __init__.py  crud.py  models.py  schemas.py
petcare-connect/backend/petowners/api/: controller.py
petcare-connect/backend/reviews/: crud.py  models.py  schemas.py
petcare-connect/backend/reviews/api/: controller.py
petcare-connect/backend/serviceproviders/: __init__.py  crud.py  models.py  schemas.py
petcare-connect/backend/serviceproviders/api/: controller.py
petcare-connect/backend/tests/: __init__.py  conftest.py  test_users_api.py
petcare-connect/backend/users/: __init__.py  authentication.py  crud.py  models.py  moduls.py  schemas.py  schemes.py
petcare-connect/backend/users/api/: controller.py
server/: package-lock.json  package.json  tsconfig.json
server/src/: index.ts
(+239 files in other folders)
